--- a/css/bdfinal.css
+++ b/css/bdfinal.css
@@ -143,6 +143,18 @@ header{
 h1{
 	letter-spacing: 1.3px;
 }
+a:link{
+    text-decoration: none;
+    color:black;
+}
+a:visited{
+    color:black;
+}
+a:hover{
+    font-style: italic;
+    color:#C13584;
+    transition: 0.9s;
+}
 p{
 	padding-left: 10px;
 	padding-right: 10px;
